[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/FontsDF/VerySmallText.tres" type="DynamicFont" id=1]
[ext_resource path="res://InfoTexts/TestProperty.gd" type="Script" id=2]

[node name="TestProperty" type="HBoxContainer"]
margin_right = 346.0
margin_bottom = 29.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 5.0
margin_right = 79.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 1 )
text = "Max Points"

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 83.0
margin_right = 87.0
margin_bottom = 29.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E" type="Label" parent="."]
margin_left = 91.0
margin_top = 5.0
margin_right = 105.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 1 )
text = "E:"

[node name="LineEditE" type="LineEdit" parent="."]
margin_left = 109.0
margin_right = 139.0
margin_bottom = 29.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
custom_constants/minimum_spaces = 5
max_length = 2

[node name="VSeparator2" type="VSeparator" parent="."]
margin_left = 143.0
margin_right = 147.0
margin_bottom = 29.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C" type="Label" parent="."]
margin_left = 151.0
margin_top = 5.0
margin_right = 166.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 1 )
text = "C:"

[node name="LineEditC" type="LineEdit" parent="."]
margin_left = 170.0
margin_right = 200.0
margin_bottom = 29.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
custom_constants/minimum_spaces = 5
max_length = 2

[node name="VSeparator3" type="VSeparator" parent="."]
margin_left = 204.0
margin_right = 208.0
margin_bottom = 29.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A" type="Label" parent="."]
margin_left = 212.0
margin_top = 5.0
margin_right = 228.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 1 )
text = "A:"

[node name="LineEditA" type="LineEdit" parent="."]
margin_left = 232.0
margin_right = 262.0
margin_bottom = 29.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
custom_constants/minimum_spaces = 5
max_length = 2
[connection signal="text_changed" from="LineEditE" to="." method="_on_LineEditE_text_changed"]
[connection signal="text_changed" from="LineEditC" to="." method="_on_LineEditC_text_changed"]
[connection signal="text_changed" from="LineEditA" to="." method="_on_LineEditA_text_changed"]
